2004-05-05  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/xtext.c (fl_drw_string): enable the drawing of characters
	in a font larger than the input widget.

2004-05-06  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/fd_spec.c: initialization of the FL_CHOICE component of
	the objspec struct used 'emit_menu_header' and 'emit_menu_global',
	a cut-n-paste typo from the following FL_MENU component. 
	They have both been reset to '0'.

2004-05-04  Angus Leeming  <angus.leeming@btopenworld.com>

	* NT/libxforms.dsp, NT/xformsAll.dsw: removed these Visual C++
	project files. They're way out of date and can be re-added
	if needed.

2004-05-05  Mike Heffner  <mheffner@vt.edu>

	* lib/fselect.c (select_cb): clean-up and simplify this callback
	function by use of the existing fl_set_browser_dblclick_callback.

2004-05-04  Angus Leeming  <angus.leeming@btopenworld.com>

	The original patch, posted to the xforms list on June 21, 2002,
	appears to have got lost. Archived here:
	http://bob.usuhs.mil/mailserv/list-archives/xforms-archive/0285.html

	Pass the associated (XEvent * xev) to fl_handle_object on an FL_DRAW
	event. This XEvent * is not used at all by any of xforms' "native"
	widgets, but an FL_FREE object is able to make use of this info to
	redraw only the part of the window that has changed. 
 
	* forms.c (fl_handle_form): pass the XEvent on an FL_DRAW event.

	* objects.c (redraw_marked): pass the XEvent to fl_handle_object.
	(mark_for_redraw): new, static function containing all but the
	'redraw_marked' call of the original fl_redraw_form.
	(fl_redraw_form): refactored code. Functionality unchanged.
	(fl_redraw_form_using_xevent): identical to fl_redraw_form, except
	that it passes the XEvent on to redraw_marked.

2004-05-02  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/flresource.c (get_command_name): squash valgrind warning
	about a possible memory leak.

2004-04-30  Angus Leeming  <angus.leeming@btopenworld.com>
